--- a/users/static/users/css/personalized_plan.css
+++ b/users/static/users/css/personalized_plan.css
@@ -88,7 +88,7 @@ body {
     border-radius: 12px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
     padding: 20px;
-    border-left: 5px solid #1d3c5337;
+    border-left: 5px solid #f2f20557 !important;
     box-sizing: border-box;
     background: #ffffff;
     position: relative;
@@ -108,7 +108,9 @@ body {
 .module-card {
     width: 220px;
     height: 300px;
-    background: #f2f20557;
+    border-left: 5px solid #f2f20557 !important;
+    background: #f2f20557 !important;
+    color: black;
     margin: 0 auto;
     text-align: center;
 }
@@ -179,6 +181,16 @@ body {
     font-weight: 800;
     margin: 0;
 }
+
+/* === MODULE TITLE SECTION === */
+.module-card h3,
+.module-card h4,
+.module-card p,
+.module-card span {
+    color: black !important;
+    opacity: 1 !important;
+}
+
 
 @media screen and (max-width: 480px) {
     .programs-container,
