--- a/users/templates/users/welcome_page_navbar.html
+++ b/users/templates/users/welcome_page_navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg shadow-sm p-3">
     <div class="container">
         <a class="logo navbar-brand fs-3" href="{% url 'welcome_page' %}">
-            <img src="{% static 'users/img/logo.png' %}" alt="Logo" width="40" class="me-2">
+            <img src="{% static 'users/img/logo.svg' %}" alt="Logo" width="40" class="me-2">
             ReWork
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
