Apply css fixes.

--- a/client/templates/client/add_video.html
+++ b/client/templates/client/add_video.html
@@ -42,7 +42,7 @@
         </form>
 
 
-        <a href="{{ request.META.HTTP_REFERER }}" class="back-btn"> Back </a>
+        <a href="{{ request.GET.next }}" class="back-btn">← Back </a>
         <a href="{% url 'video_list' %}" class="back-btn">Video List</a>
 
 </div>
