--- a/client/static/client/css/add_video.css
+++ b/client/static/client/css/add_video.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
 
 .video-container {
     width: 1000px;
@@ -15,11 +16,10 @@
 .page-title {
     font-size: 30px;
     font-weight: bold;
-    color: #F24505;
-    margin-top: 40px;
-    margin-bottom: 0px;
-    text-transform: uppercase;
+    color: #2b2320;
     text-align: center;
+    margin-bottom: 30px;
+    text-transform: uppercase;
 }
 
 .form-group {
@@ -65,45 +65,46 @@
     border: 4px solid #F24505;
 }
 
-
 .upload-btn {
     width: 100%;
-    padding: 14px;
-    font-size: 16px;
-    font-weight: bold;
-    text-align: center;
-    text-decoration: none;
-    color: #fff;
+    padding: 10px 14px;
     background: #F24505;
-    border: none;
-    border-radius: 8px;
+    color: white;
+    border-radius: 20px;
+    font-size: 16px;
+    font-family: Manrope;
+    font-weight: bold;
     cursor: pointer;
+    text-align: center;
+    transition: background 0.3s;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
 }
 
 .upload-btn:hover {
-    background: #F24505;
-    transform: scale(1.05);
+    background: #D43802;
 }
-
 
 .back-btn {
     display: inline-block;
-    position: relative;
-    left: -20px;
-    margin-top: 170px;
+    margin-top: 30px;
     padding: 12px 24px;
     font-size: 16px;
     font-weight: bold;
     text-decoration: none;
     color: #fff;
     background: #F24505;
-    border-radius: 8px;
+    border-radius: 20px;
+    transition: background 0.3s;
 }
 
 .back-btn:hover {
-    background: #F24505;
-    transform: scale(1.05);
+    background: #D43802;
 }
+
 
 
 @media (max-width: 1200px) {
