--- a/client/templates/client/add_additional_resource.html
+++ b/client/templates/client/add_additional_resource.html
@@ -66,7 +66,7 @@
         <button type="submit" class="upload-btn">Save Resource</button>
     </form>
 
-    <a href="{{ request.META.HTTP_REFERER }}" class="back-btn"> Back </a>
+    <a href="{{request.GET.next}}" class="back-btn">← Back </a>
     <a href="{% url 'resource_list' %}" class="back-btn">Resource list</a>
 </div>
 {% endblock %}
