--- a/users/static/users/css/journal.css
+++ b/users/static/users/css/journal.css
@@ -70,9 +70,8 @@ form {
 }
 
 .journal-entry input,
-.journal-entry textarea,
-.journal-entry select {
-    width: 100%;
+.journal-entry textarea{
+    width: 95%;
     height: 45px;
     padding: 12px 16px;
     font-size: 15px;
@@ -84,6 +83,37 @@ form {
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
 }
 
+.journal-entry select {
+    width: 100%; 
+    height: 50px;
+    padding: 14px 18px;
+    padding-right: 45px; 
+    font-size: 16px;
+    border: 1px solid #CCC;
+    border-radius: 25px;
+    background-color: #eaeaea79; 
+    box-sizing: border-box;
+    -webkit-appearance: none; 
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+    cursor: pointer; 
+    transition: all 0.2s ease;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+}
+
+.journal-entry select:hover {
+    border-color: #888;
+    background-color: #fff; 
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
+}
+
+.journal-entry select option {
+    padding: 10px;
+    background-color: #fff;
+    color: #333;
+}
+
 textarea {
     min-height: 90px;
     resize: vertical;
@@ -92,7 +122,6 @@ textarea {
 .toggle-group {
     display: flex;
     gap: 8px;
-    flex-wrap: wrap;
 }
 
 .toggle-group input {
@@ -113,6 +142,7 @@ textarea {
     align-items: center;
     justify-content: center;
     height: 35px;
+    width: 75px;
 }
 
 .toggle-group input:checked + label {
