Fix the title in all_modules page.

--- a/users/templates/users/all_modules.html
+++ b/users/templates/users/all_modules.html
@@ -12,7 +12,7 @@
 <section class="modules-container">
   <!-- Header with Title on left, Search on right -->
   <header class="modules-header">
-    <h2>Your Modules</h2>
+    <h2>All Modules</h2>
     <input 
       type="text" 
       class="search-bar" 
