--- a/users/static/users/css/exercise_detail.css
+++ b/users/static/users/css/exercise_detail.css
@@ -95,6 +95,7 @@ h2 {
     border-radius: 5px;
     border: 1px solid #ccc;
     font-size: 1rem;
+    color: black;
     transition: border 0.2s ease-in-out;
 }
 .answer-field:focus {
@@ -112,7 +113,7 @@ h2 {
     font-size: 16px;
   padding: 14px 20px;
   background-color: #F24505;
-  color: white;
+  color: rgb(0, 0, 0);
   text-decoration: none;
   border-radius: 25px;
   font-weight: bold;
