--- a/users/templates/users/partials/module_card.html
+++ b/users/templates/users/partials/module_card.html
@@ -3,17 +3,14 @@
   <h3>{{ module.title }}</h3>
   <p>{{ module.description }}</p>
 
-  <!-- Progress Bar -->
+  <!-- Progress Bar Section -->
   <div class="progress-container">
     <div class="progress-bar">
       <div class="progress-fill" style="width: {{ module.progress_value }}%;"></div>
     </div>
   </div>
-
   <span class="progress-text">{{ module.progress_value }}% Complete</span>
 
-  <!-- Link to the module overview -->
-  <a href="{% url 'module_overview' module.id %}" class="view-module-button">
-    View Module
-  </a>
+  <!-- Module Button -->
+  <a href="{% url 'module_overview' module.id %}" class="view-module-button">View Module</a>
 </div>
