--- a/users/static/users/css/all_modules.css
+++ b/users/static/users/css/all_modules.css
@@ -170,7 +170,7 @@
     position: absolute;
     top: 10px;
     right: 10px;
-    background-color: #b6a98f	;
+    background-color: #b6a98f;
     border-radius: 50%;
     width: 30px;
     height: 30px;
@@ -180,10 +180,11 @@
     cursor: pointer;
   }
   
-  .action-button ion-icon {
-    font-size: 18px;
+  .action-button i {
+    font-size: 16px;
     color: white !important;
   }
+  
   
   /* Media Query for smaller screens */
   @media (max-width: 800px) {
