--- a/users/templates/users/all_modules.html
+++ b/users/templates/users/all_modules.html
@@ -27,11 +27,11 @@
         <!-- Enroll/Unenroll Button (Ionicon) -->
         <div class="action-button" onclick="toggleModule(this, '{{ module.title|escapejs }}')">
           {% if module.title in enrolled_modules %}
-            <ion-icon name="remove-outline"></ion-icon>
+            <i class="fas fa-minus"></i>
           {% else %}
-            <ion-icon name="add-outline"></ion-icon>
+            <i class="fas fa-plus"></i>
           {% endif %}
-        </div>
+        </div>        
 
         <h3>{{ module.title }}</h3>
         <p>{{ module.description }}</p>
